--- a/_estilo/style_index.css
+++ b/_estilo/style_index.css
@@ -6,7 +6,7 @@ background-color: rgba(167, 204, 230, 0.411);
     font-family: 'Indie Flower', cursive;
     text-align: center;
     font-size: 20px;
-    padding: 0%;
+    margin-bottom: 35px;
 }
 .box_user_pass{
 position: relative;
@@ -15,7 +15,7 @@ height: 500px;
 background-color: rgb(255, 255, 255);
 border: 1px solid black;
 margin: auto;
-margin-top: 10px;
+margin-top: -50px;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .box_user_pass h1{
@@ -45,7 +45,7 @@ border-radius: 100px;
 background-color: rgb(143, 143, 143);
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 60px;
-margin-top: 5px;
+
 }
 #enviar:hover{
 background-color: aliceblue;
@@ -53,13 +53,13 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #rodape{
 position: relative;
-margin-top: 3%;
+margin-top: 20px;
 border-top: 1px solid black;
 background-color: rgb(193, 248, 230);
 }
-#rodape p{
-text-align: center;
+#rodape a{
 font-size: 10px;
+margin-left: 500px;
 }
 a{
 position: relative;
