--- a/_style/style.css
+++ b/_style/style.css
@@ -36,7 +36,7 @@ nav{
   color: white;
   vertical-align: middle;
   text-align: center;
-  font-family: 'Fredoka One', cursive;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
 }
 #menu2:hover{
@@ -64,8 +64,7 @@ vertical-align:middle;
 P{
 text-align: center;
 color: white;
-font-family: 'Fredoka One', cursive;
-font-size: 15px;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #tabela{
   position: absolute;
