--- a/_style/style.css
+++ b/_style/style.css
@@ -23,10 +23,8 @@ nav{
   list-style: none;
   padding: 0px;
   background-color: blueviolet;
-  text-align: center;
-  margin-top: 0;
+  text-align:end;
   border-radius: 10px;
-
 }
 #menu2{
   width: 150px;
@@ -36,12 +34,14 @@ nav{
   color: white;
   vertical-align: middle;
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Akaya Telivigala', cursive;
   font-size: 20px;
+  transition: color 1s, background-color 0.7s, border-radius 0.5;
 }
 #menu2:hover{
-  background-color: rgba(106, 33, 173, 0.76);
+  background-color: rgb(105, 33, 173);
   color: aqua;
+  border-radius: 10px;
 }
 a{
   text-decoration: none;
