--- a/_style/styleemulador.css
+++ b/_style/styleemulador.css
@@ -24,4 +24,19 @@ h1{
 h1::before{
     content: "🎮";
     display: block;
-    }
+}
+.butao{
+font-size: 25px;
+border-radius: 40px;
+padding: 7px;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+background-color: #FFF;
+transition: background 0.5s, border 0.5s, color 0.5s, box-shadow 0,8s;
+cursor: pointer;
+}
+.butao:hover{
+background-color: rgb(14, 13, 13);
+border: 3px solid aquamarine; 
+box-shadow: 0 0 0 2px rgba(0, 255, 170, 0.39);
+color: white;
+}
