--- a/_style/style_index.css
+++ b/_style/style_index.css
@@ -3,9 +3,10 @@ body{
 }
 #background{
     position:absolute;
-    margin-left: 600px;
+    height: 750px;
+    margin-left: 550px;
     opacity: 50%;
-    margin-top: 140px;
+    margin-top:153px;
 }
 #background1{
   position:absolute;
@@ -52,8 +53,8 @@ table{
   border: 1px solid white;
 color: white;
 table-layout: fixed;
-width: 500px;
-height: 300px;
+width: 600px;
+height: 350px;
 }
 tr,th{
 border: 1px solid white;
@@ -78,10 +79,11 @@ font-family: 'Pacifico', cursive;
   margin-left: 10px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
  }
- #jogo:hover{
- border: 5px solid rgba(70, 70, 70, 0.479);
- opacity: 80%;
+ #jogo1:hover{
+  border: 5px solid rgba(70, 70, 70, 0.479);
+ opacity: 90%;
  }
 #jogo2{
   position: absolute;
@@ -92,6 +94,7 @@ font-family: 'Pacifico', cursive;
   margin-left: 230px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
 }
 #jogo2:hover{
  border: 5px solid rgba(70, 70, 70, 0.479);
@@ -106,6 +109,7 @@ font-family: 'Pacifico', cursive;
   margin-left: 450px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
 }
 #jogo3:hover{
  border: 5px solid rgba(70, 70, 70, 0.479);
@@ -120,6 +124,7 @@ font-family: 'Pacifico', cursive;
   margin-left: 10px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
 }
 #jogo4:hover{
  border: 5px solid rgba(70, 70, 70, 0.479);
@@ -134,6 +139,7 @@ font-family: 'Pacifico', cursive;
   margin-left: 228px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
 }
 #jogo5:hover{
  border: 5px solid rgba(70, 70, 70, 0.479);
@@ -148,48 +154,45 @@ font-family: 'Pacifico', cursive;
   margin-left: 450px;
   border: 2px solid rgba(0, 162, 255, 0.712);
   display: flex;
+  transition: border 0.3s;
 }
 #jogo6:hover{
  border: 5px solid rgba(70, 70, 70, 0.479);
  opacity: 80%;
  }
-  #rodape{
-    margin-top: 700px;
+#rodape p{
+margin-top: 880px;
   }
+
   @media screen and (min-width: 0px) and (max-width: 500px){
 
   #background{
-  display: none;
+    display: none;
   }
-
   #background1{
-  margin-left: -5px;
-  margin-top: -80px;
-  width: 403px;
+    margin-left: -5px;
+    margin-top: -80px;
+    width: 100%;
   }
-
 nav{
   height: 190px;
   width: 100%;
 
 }
-
 #menu1{
   list-style: none;
   background-color: blueviolet;
   border-radius: 10px;
   text-align: center
 }
-
 #menu2{
   background-color: blueviolet;
   color: white;
   font-family: 'Press Start 2P', cursive;
   transition: color 1s, background-color 0.7s, border-radius 0.5;
-  
 }
 table{
-display: none;
+  display: none;
 }
 #jogo1{
   margin-top: 90px;
@@ -226,5 +229,8 @@ display: none;
     margin-left: 215px;
     width: 40%;
     height: 20%;
+}
+#rodape p{
+  margin-top: 700px;
 }
 }
