--- a/_style/styleemulador.css
+++ b/_style/styleemulador.css
@@ -1,42 +1,102 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body {
+body{
     background-color: black;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-right: 1rem;
-    padding-left: 1rem;
 }
-h1{
-    font-size: 3rem;
-    color: white;
-    margin-bottom: 2rem;
-    text-align: center;
-    line-height: 1.2;
+#background{
+    position:absolute;
+    margin-left:-180px;
+    opacity: 50%;
+    margin-top: 30px;
 }
-h1::before{
-    content: "🎮";
-    display: block;
+#background1{
+  position:absolute;
+  margin-left: 700px;
 }
-.butao{
-font-size: 25px;
-border-radius: 40px;
-padding: 7px;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-background-color: #FFF;
-transition: background 0.5s, border 0.5s, color 0.5s, box-shadow 0,8s;
-cursor: pointer;
+nav{
+    background-color: rgb(107, 43, 226);
+    margin: 0%;
+    padding: 0%;
 }
-.butao:hover{
-background-color: rgb(14, 13, 13);
-border: 3px solid aquamarine; 
-box-shadow: 0 0 0 2px rgba(0, 255, 170, 0.39);
-color: white;
+#menu1{
+  list-style: none;
+  padding: 0px;
+  background-color: rgb(107, 43, 226);
+  text-align:end;
+  border-radius: 10px;
+}
+#menu2{
+  width: 150px;
+  height: 50px;
+  display: table-cell;
+  background-color: rgb(107, 43, 226);
+  color: white;
+  vertical-align: middle;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 15px;
+  padding: 3px;
+  transition: color 1s, background-color 0.7s, border-radius 0.5;
+}
+#menu2:hover{
+  color: aqua;
+  border-radius: 10px;
+}
+a{
+  text-decoration: none;
+}
+p{
+  text-align: center;
+  color: white;
+}
+.emulador1{
+  margin-left: 1080px;
+  margin-top: 200px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+.emulador2{
+  margin-left: 1080px;
+  margin-top: 10px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+.emulador3{
+  margin-left: 1080px;
+  margin-top: 10px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+.emulador4{
+  margin-left: 1080px;
+  margin-top: 10px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+.emulador5{
+  position: absolute;
+  margin-left: -450px;
+  margin-top: -636px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+.emulador6{
+  position: absolute;
+  margin-left: -450px;
+  margin-top: -420px;
+width: 200px;
+height: 200px;
+border: 1px solid red;
+border-radius: 20px;
+}
+#rodape{
+  margin-top: -50px;
 }
