--- a/_style/styleroms.css
+++ b/_style/styleroms.css
@@ -1,42 +1,52 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body {
+body{
     background-color: black;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-right: 1rem;
-    padding-left: 1rem;
 }
-h1{
-    font-size: 3rem;
-    color: white;
-    margin-bottom: 2rem;
-    text-align: center;
-    line-height: 1.2;
+#background{
+    position:absolute;
+    margin-left:-180px;
+    opacity: 50%;
+    margin-top: 30px;
 }
-h1::before{
-    content: "🎮";
-    display: block;
-    }
-    .butao{
-        font-size: 25px;
-        border-radius: 40px;
-        padding: 7px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: #FFF;
-        transition: background 0.5s, border 0.5s, color 0.5s, box-shadow 0,8s;
-        cursor: pointer;
-        }
-        .butao:hover{
-        background-color: rgb(14, 13, 13);
-        border: 3px solid aquamarine; 
-        box-shadow: 0 0 0 2px rgba(0, 255, 170, 0.39);
-        color: white;
-        }
+#background1{
+  position:absolute;
+  margin-left: 700px;
+}
+nav{
+    background-color: rgb(107, 43, 226);
+    margin: 0%;
+    padding: 0%;
+}
+#menu1{
+  list-style: none;
+  padding: 0px;
+  background-color: rgb(107, 43, 226);
+  text-align:end;
+  border-radius: 10px;
+}
+#menu2{
+  width: 150px;
+  height: 50px;
+  display: table-cell;
+  background-color: rgb(107, 43, 226);
+  color: white;
+  vertical-align: middle;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 15px;
+  padding: 3px;
+  transition: color 1s, background-color 0.7s, border-radius 0.5;
+}
+#menu2:hover{
+  color: aqua;
+  border-radius: 10px;
+}
+a{
+  text-decoration: none;
+}
+p{
+  text-align: center;
+  color: white;
+}
+#rodape{
+    margin-top: 1036px;
+}
