--- a/_style/styleroms.css
+++ b/_style/styleroms.css
@@ -47,6 +47,33 @@ p{
   text-align: center;
   color: white;
 }
-#rodape{
-    margin-top: 1036px;
+.lista_roms{
+margin-left: 550px;
+margin-top: 230px;
+width: 820px;
+height: 750px;
+display: flex;
+flex-wrap:nowrap;
 }
+#Jogo{
+  color: white;
+  border: 1px solid white;
+  width: 200px;
+  height: 50px;
+  border-radius: 100px;
+  margin: 10px 10px 0px 10px ;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 9px;
+  background-image: url(/_imagens/super_nintendo.png);
+  text-align: center;
+  vertical-align: middle;
+}
+#Jogo:hover{
+  border: 2px solid rgb(24, 24, 24);
+  box-shadow: 3px 3px 3px 3px rgba(87, 87, 87, 0.548);
+}
+#rodape{
+    margin-top: 60px;
+}
+
+
